--- a/fly.toml
+++ b/fly.toml
@@ -11,6 +11,10 @@ processes = []
 [experimental]
   auto_rollback = true
 
+[mounts]
+  source = "data"
+  destination = "/data"
+
 [[services]]
   http_checks = []
   internal_port = 8080
